Fix horizontal scrolling on mobiles.

--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -15,15 +15,6 @@
   }
 }
 
-html {
-  &.home {
-    &,
-    body {
-      overflow-x: hidden;
-    }
-  }
-}
-
 body {
   display: flex;
   flex-direction: column;
