--- a/assets/stylesheets/home/_about.scss
+++ b/assets/stylesheets/home/_about.scss
@@ -5,6 +5,7 @@
 .about {
   border-top: 1px solid $gray-light;
   padding: ($section-spacing-y-phone - 14px) 0 ($section-spacing-y-phone -  8px) 0;
+  overflow-x: hidden;
 
   @media (min-width: $sm) {
     padding-top: $section-spacing-y - 19px;
